--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -41,3 +41,24 @@
   background: #2AD705;
   color: #ffffff;
 }
+
+.frame-container{
+  max-width:100%;
+  padding:1em;
+  overflow:auto;
+  #jitsi{
+    width:100%;
+  }
+  #whiteboard{
+    width:100%;
+  }
+}
+
+textarea {
+  resize: none;
+    width: 600px;
+  height: 120px;
+  border: 3px solid #cccccc;
+  padding: 5px;
+  font-family: Tahoma, sans-serif;
+}
