--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -9,7 +9,8 @@
     <script src="/lodash/index.js"></script>
     <script src="/jquery/dist/jquery.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.9.1/d3.js"></script>
     <script scr="/jquery-ui/jquery-ui.js"></script>
     <script src="/jquery.hotkeys/jquery.hotkeys.js"></script>
     <script src="/angular/angular.js"></script>
@@ -24,6 +25,7 @@
     <script src="/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
     <script src="/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
     <script src="/socket.io-client/dist/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js"></script>
     <script src="https://meet.jit.si/external_api.js"></script>
     <script src="/main.js"></script>
 </head>
