--- a/browser/scss/classroom/main.scss
+++ b/browser/scss/classroom/main.scss
@@ -1,3 +1,13 @@
 #jitsi{
 	overflow:auto;
 }
+.course-thumbnails{
+	max-height:100%;
+	max-width:100%;
+	min-height:100%;
+	min-width:100%;
+}
+.my-course-block{
+	height:250px;
+	width:300px;
+}
