--- a/browser/theme/app.css
+++ b/browser/theme/app.css
@@ -844,7 +844,7 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  overflow: auto;
+  overflow-x:hidden;
   -webkit-overflow-scrolling: touch;
 }
 
