--- a/browser/theme/student.css
+++ b/browser/theme/student.css
@@ -123,7 +123,7 @@ ul.class-list li:after { content: "."; visibility: hidden; display: block; heigh
 .courses .outlined-btn.red-btn { margin-left: 10px; }
 .pro-img-list img { width: 100%; }
 .pro-img-list { width: 50px; height: 50px; margin-right: 15px; display: inline-block; -webkit-border-radius: 100px; vertical-align: middle; -moz-border-radius: 100px; border-radius: 100px; overflow: hidden; }
-.activity-title { display: inline-block; vertical-align: middle; font-size: 16px; font-weight: 600; }
+.activity-title { display: inline-block; vertical-align: middle; font-size: 20px; font-weight: 600; }
 span.desc-det { font-size: 14px; font-weight: normal; color: #99a6bb; }
 .desc-lbl { color: #333; }
 .desc-lbl:last-child { padding-left: 8px; }
@@ -635,7 +635,7 @@ a.link { color: #0583e4 !important; }
        border: 1px solid #dddfe4;}
 .class-me small,   .chat-text small{color: #a2a2a2; margin-top: 5px; display: block; margin-bottom: 5px}
 .chat-input{width: 100%; padding: 10px; border: 1px solid #dddce0}
-.conversation li{margin-bottom: 20px;}
+.conversation li{margin-bottom: 20px; position:relative;}
 .conversation li:last-child{margin-bottom: 0}
 .chat-footer{background: #262c38;
     padding: 5px; color: #fff; font-weight: bold;}
