--- a/browser/theme/teacher.css
+++ b/browser/theme/teacher.css
@@ -296,7 +296,7 @@ div.states > .desc-det i { color: #ffa409; }
 .conversation img { max-width: 100%; max-height: 100%; }
 .chat-user { width: 45px; height: 45px; overflow: hidden; border-radius: 50px; text-align: center; position: absolute; }
 .class-me small, .chat-text small { color: #a2a2a2; margin-top: 5px; display: block; margin-bottom: 5px; }
-.conversation li { margin-bottom: 20px; }
+.conversation li { margin-bottom: 20px; position:relative;}
 .class-me { flex: left; margin-left: 55px; font-size: 13px; border: 1px solid; padding: 5px 10px; border-radius: 3px; border: 1px solid #dddfe4; }
 .chat-window { border: 1px solid #e4e8ee; }
 .chat-input { width: 100%; padding: 10px; border: 1px solid #dddce0; }
