--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -17,6 +17,7 @@
     <script src="/angular-animate/angular-animate.js"></script>
     <script src="/angular-css/angular-css.js"></script>
     <script src="/moment/moment.js"></script>
+    <script src="/angularjs-scroll-glue/src/scrollglue.js"></script>
     <script src="/angular-moment/angular-moment.js"></script>
     <script src="/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
     <script src="/angular-file-saver/dist/angular-file-saver.js"></script>
