--- a/browser/theme/student.css
+++ b/browser/theme/student.css
@@ -24,12 +24,12 @@ a.active, a:hover { color: #0583e4; }
 .thumb-lg { width: 130px; margin: 0; }
 .thumb-sm { width: 46px; }
 div.navbar-header.g-black { display: inline-block; float: none; }
-.btn.no-shadow.navbar-btn { padding: 36px 35px 36px 20px; margin: 0; cursor: pointer; display: inline-block; }
-.edv-search { display: inline-block; padding: 30px; padding-right: 0; vertical-align: top; width: 100%; max-width: 460px; }
-.edv-search input { border: 1px solid #cbcfd2; padding: 8px 54px 11px 16px!important; font-size: 15px; border: 1px solid #cbcfd2; padding: 9px 16px; font-size: 15px; width: 100%; }
+.btn.no-shadow.navbar-btn { padding: 25px 27px 25px 0px; margin: 0; cursor: pointer; display: inline-block;    width: 68px; }
+.edv-search { display: inline-block; padding: 20px 30px; padding-right: 0; vertical-align: top; width: 100%; max-width: 460px; }
+.edv-search input { border: 1px solid #cbcfd2; padding: 6px 54px 8px 11px!important; font-size: 15px; border: 1px solid #cbcfd2; padding: 9px 16px; font-size: 15px; width: 100%; }
 .edv-search form { position: relative; }
-.edv-search .btn.btn-default { position: absolute; top: 0; right: 0; padding: 11px 24px; margin: 0; border: 0; border-radius: 0; color: #fff; background: url(../img/search.png) center no-repeat #ffa409; text-indent: -500px; overflow: hidden; }
-.navbar-nav > li > a.profile-icon { margin: 24px 0; padding: 15px 27px 15px 10px; }
+.edv-search .btn.btn-default { position: absolute; top: 0; right: 0; padding: 8px 20px 9px; margin: 0; border: 0; border-radius: 0; color: #fff; background: url(../img/search.png) center no-repeat #ffa409; text-indent: -500px; overflow: hidden; }
+.navbar-nav > li > a.profile-icon { margin: 11px 0; padding: 15px 27px 15px 10px; }
 .dropdown-toggle.icons-info { padding: 9px 1px 7px 6px; border: 1px solid #cccccc; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; position: relative; margin: 31px 6px; }
 .icons-info.cart-ic { margin-right: 0; }
 .thumb-sm.avatar { margin-right: 5px; margin-left: 0; }
@@ -52,7 +52,7 @@ ul.topbar-links li { display: inline-block; padding: 5px; margin: 8px; }
 ul.topbar-links > .call-li { border-right: 1px solid #efefef; padding-right: 24px; }
 .call-li img { display: inline-block; margin-top: -4px; margin-right: 5px; }
 .icons-info .badge.badge-sm { font-size: 11px; font-weight: normal; }
-.navi ul.nav.edv-nav li a { padding: 26px 35px 22px; font-size: 18px; color: #cdccca; }
+.navi ul.nav.edv-nav li a { padding: 15px 35px 15px; font-size: 16px; color: #cdccca; }
 .navi ul.nav.edv-nav > li a { border-bottom: 1px solid #2b2b2b; background: transparent; }
 .editpro { border-top: 1px solid #2b2b2b; }
 .nav.edv-nav li.active { background: #141414; }
@@ -66,7 +66,7 @@ ul.topbar-links > .call-li { border-right: 1px solid #efefef; padding-right: 24p
 .navbar-header i.glyphicon-cog, .navbar-header i.glyphicon-align-justify { color: #e9e9e9; }
 .user-thum-lg > span { display: inline-block; width: 100%; text-align: center; }
 .user-thum-lg > span > a { padding: 0 !important; text-align: center; }
-span.block.user-pro-name { font-size: 24px; font-weight: bold; color: #fff; padding-top: 15px; }
+span.block.user-pro-name { font-size: 24px; font-weight: 400; color: #fff; padding-top: 15px; }
 .bredcrumb { padding-bottom: 3px; }
 .profile-user { display: none; }
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus { border-color: #ea605e; }
@@ -92,6 +92,9 @@ span.block.user-pro-name { font-size: 24px; font-weight: bold; color: #fff; padd
 .dateranga-lbl { padding: 23px 7px 23px 0; font-weight: bold; color: #8a8a8a; float: left; }
 .comp-tra { font-size: 18px; font-family: 'Montserrat', sans-serif; font-weight: bold; margin-top: 27px; text-align: right; }
 /*students start*/
+a.edvance-logo img{width: 100%;}
+a.edvance-logo{max-width: 213px; display: inline-block; margin-top: 2px;}
+span.mainmenu-icon img{width: 100%}
 .bold-hr { border-top: 2px solid #0583e4; width: 40px; float: left; margin: 13px 0; }
 .desc-lbl { color: #555c66 !important; }
 thead.upppercase th { font-size: 11px; text-transform: uppercase; }
@@ -190,6 +193,25 @@ ul.profile-tab > li.active a { position: relative; }
 .act-stat { font-size: 20px; margin-top: 5px; }
 .add-paroll-method { display: none; margin-top: 15px; }
 /*Edit Profile End*/
+/*Teacher Profile Start*/
+ul.aboutteach-info { padding: 0; list-style: none; }
+ul.aboutteach-info li { width: 100%; margin-bottom: 20px; }
+ul.aboutteach-info li label { font-family: 'Montserrat', sans-serif; }
+.teach-bio { position: relative; }
+ul.aboutteach-info li > span { color: #657184; display: block; }
+ul.aboutteach-info li .course-count { font-size: 18px; padding: 5px 11px; margin-left: 5px; }
+ul.aboutteach-info li .t-phone { margin: 20px 0 0; border-bottom: 0; }
+.teach-course-list div.course-img-wrap { width: 200px; }
+.teach-course-list div.course-det { padding-left: 218px !important; }
+.teach-profile .teacherpro { width: 153px; height: 153px; margin: 0 auto; border-radius: 100%; overflow: hidden; }
+.teacherpro > img{max-width:100%;}
+.teach-profile .sec-title.b { text-align: center; margin-bottom: 10px; }
+.teach-profile div { text-align: center; }
+.teach-profile .pro-degree { color: #657184; font-family: 'Montserrat', sans-serif; font-size: 18px; margin-bottom: 15px; }
+.teach-profile .timeperiods span { background: #0583e4; color: #fff; padding: 6px 10px; border-radius: 3px; margin-right: 10px; display: inline-block; }
+.teach-profile .timeperiods { margin-bottom: 30px; }
+.teach-profile .timeperiods span:last-child { margin-right: 0; }
+/*Teacher Profile End*/
 /*My Cources Start*/
 .btn-toolbar .btn-group:first-child { margin-left: 0; }
 .btn-toolbar { margin-bottom: 0; margin-left: 0; }
